<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoarding1">


    <ImageView
        android:id="@+id/big_circle"
        android:layout_width="288dp"
        android:layout_height="512dp"
        android:src="@drawable/big_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/big_circle" />


    <ImageView
        android:id="@+id/small_circle"
        android:layout_width="110dp"
        android:layout_height="200dp"
        android:src="@drawable/small_circle_resized"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/small_circle" />

    <ImageView
        android:id="@+id/dummy_img"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:src="@drawable/dummy_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        android:contentDescription="@string/dummy_image" />

    <ImageView
        android:id="@+id/scroll"
        android:layout_width="80dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:srcCompat="@drawable/pg1"
        android:contentDescription="@string/next_page_transistion" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tyckit_logo"
        android:contentDescription="@string/tyckit_logo" />

    <TextView
        android:id="@+id/next_button"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:background="@drawable/rectangular_button"
        android:fontFamily="sans-serif"
        android:paddingStart="25dp"
        android:paddingEnd="20dp"
        android:paddingTop="7dp"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/dummy_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1_l1"
        android:textSize="24sp"
        android:textColor="@color/tyckit_text"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/dummy_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p1_l2"
        android:textSize="24sp"
        android:textColor="@color/tyckit_text"
        android:textStyle="bold"
        android:letterSpacing="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />


    <TextView
        android:id="@+id/dummy_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_l1"
        android:textColor="@color/tyckit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/dummy_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p2_l2"
        android:textColor="@color/tyckit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />


</androidx.constraintlayout.widget.ConstraintLayout>