<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/dummyimg"
        android:layout_width="330dp"
        android:layout_height="330dp"
        android:src="@drawable/dummy_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.211"
        android:contentDescription="@string/dummy_image" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/tyckit_logo"
        android:contentDescription="@string/tyckit_logo" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/tyckit_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.58" />

    <EditText
        android:id="@+id/user_id"
        android:layout_width="330dp"
        android:layout_height="30dp"
        android:layout_marginTop="132dp"
        android:background="@drawable/login_box"
        android:drawableStart="@drawable/user_btn"
        android:drawablePadding="20dp"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:textColorHint="@color/tyckit_text"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="TouchTargetSizeCheck" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="330dp"
        android:layout_height="30sp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/icon_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75">

        <EditText
            android:id="@+id/password"
            android:layout_width="330dp"
            android:layout_height="30sp"
            android:background="@drawable/login_box"
            android:drawableStart="@drawable/password_btn"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="35dp"
            android:paddingEnd="35dp"
            android:textSize="12sp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck">

        </EditText>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/icon_color"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/next_button"
        android:layout_width="330dp"
        android:layout_height="30sp"
        android:paddingTop="8dp"
        android:background="@drawable/rectangular_button"
        android:paddingStart="150dp"
        android:paddingEnd="1dp"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />


</androidx.constraintlayout.widget.ConstraintLayout>